test/files/neg/infix-op-positions.scala
object Test {
  Option(1) -! "test" // left associative operator
  "test" -!: Option(1) // right associative operators
}
