test/files/neg/infix-op-positions.check
infix-op-positions.scala:2: error: value -! is not a member of Option[Int]
  Option(1) -! "test" // left associative operator
            ^
infix-op-positions.scala:3: error: value -!: is not a member of Option[Int]
  "test" -!: Option(1) // right associative operators
         ^
two errors found
